[package]
name = "language-unpack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
rmp = "0.8.12"
rmp-serde = "1.1.2"
rmpv = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
xxhash32-lib = { path = "../xxhash32-lib" }
clap = { version = "4.5.1", features = ["derive"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
anyhow = "1.0.81"
serde_json = "1.0.114"
